--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
-    <a href="https://wa.me/256701632748" class="btn btn-primary btn-component" data-spy="affix" data-offset-top="600"><i class="ti-shift-left-alt"></i>Contact Me</a>
+    <a href="https://wa.me/256744571363" class="btn btn-primary" data-spy="affix" data-offset-top="600"><i class="ti-shift-left-alt"></i>Contact Me</a>
     <header class="header">
         <div class="container">
             <ul class="social-icons pt-3">
@@ -266,7 +266,7 @@
     <section class="section bg-dark py-5">
         <div class="container text-center">
             <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2>
-            <button class="btn btn-primary w-lg"><a href="https://wa.me/256744571363">Hire me</a></button>
+            <button class="btn btn-primary"><a href="https://wa.me/256744571363">Hire me</a></button>
         </div>
     </section>
 
