--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     <section class="section bg-dark py-5">
         <div class="container text-center">
             <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2>
-            <button class="btn btn-primary"><a href="https://wa.me/256744571363">Hire me</a></button>
+            <button class="btn btn-primary" style=color: #fff;><a href="https://wa.me/256744571363">Hire me</a></button>
         </div>
     </section>
 
